frontend-deployment-az.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # Use placeholder tag; Azure DevOps will replace it
          image: fmregistry123.azurecr.io/shiveshcfootballmanager:REPLACE_TAG
          ports:
            - containerPort: 3000
