frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
